[repo] fix deprecated API usage